--- a/bep20-token-generator/static/styles.css
+++ b/bep20-token-generator/static/styles.css
@@ -556,7 +556,7 @@ section {
   opacity: 1;
 }
 
-/* .top-logo-2 {
+.top-logo-2 {
   display: none;
 }
 
@@ -568,4 +568,4 @@ section {
   .top-logo-2 {
     display: block;
   }
-} */
+}
