--- a/static/styles.css
+++ b/static/styles.css
@@ -556,7 +556,7 @@ section {
   opacity: 1;
 }
 
-/* .top-logo-2 {
+.top-logo-2 {
   display: none;
 }
 
@@ -568,4 +568,26 @@ section {
   .top-logo-2 {
     display: block;
   }
-} */
+}
+
+/* icons */
+.fab {
+  color: gainsboro;
+}
+
+.icon {
+  text-decoration: none;
+}
+
+.fa-telegram:hover {
+  color: #2aabee;
+}
+
+.fa-youtube:hover {
+  color: #ff0000;
+}
+
+/* footer links */
+p a:hover {
+  background-color: greenyellow;
+}
